# Libft

./: .gitignore  CMakeLists.txt  Makefile  README.md  bzero.c  ft_calloc.c  ft_itoa.c  ft_memcpy.c  ft_putnbr_fd.c  ft_split.c  ft_strjoin.c  ft_strlcat.c  ft_substr.c  main_for_test.c
include/Libft/: libft.h
includes/: dictionary.h  get_next_line.h  libft.h  libft_internal.h  stack.h
sources/: arr_chr.c  arr_hasdup.c  arr_ichr.c  arr_tolstmap.c  array_contain.c  array_dup.c  array_int_dup.c  array_len.c  arrint_dup.c  arrstr_tolstmap.c  atodouble.c  atoi_base.c  btr_get_last.c  btr_get_root.c  bzero.c  change_opacity.c  contains_int.c  dic_clear.c  dic_get.c  dic_isvalid.c  dic_new.c  dic_set.c  dic_to_val_lstmap.c  dicstrstr_get.c  dicstrstr_new.c  dicstrstr_set.c  find_best.c  find_median.c  find_median_int.c  first_index.c  foreach.c  free_dict_el.c  free_str_ptr.c  ft_atof.c  ft_bzero.c  ft_calloc.c  ft_isalpha.c  ft_itoa.c  ft_lstadd_front.c  ft_lstclear.c  (+90 more)
src/: is_whitespace.c  libft_internal.h
